Svaki WorkerDispatcher sada formira poseban dir

--- a/WorkerDispatcher.properties
+++ b/WorkerDispatcher.properties
@@ -37,7 +37,7 @@ AccessString =
 
 # Location where report files created by worker handlers will be stored
 # NOTE: careful with the trailing spaces!
-ReportsLocationDir = log/
+ReportsLocationDir = /home/milos/NetBeansProjects/WorkBinder/log/
 
 # Application settings
 #
