--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.cog-jglobus.jar=lib/cog-jglobus.jar
 file.reference.commons-codec-1.2.jar=lib/commons-codec-1.2.jar
 file.reference.commons-discovery-0.2.jar=lib/commons-discovery-0.2.jar
 file.reference.commons-httpclient-3.0-rc2.jar=lib/commons-httpclient-3.0-rc2.jar
+file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
 file.reference.commons-lang-2.4.jar=lib/commons-lang-2.4.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.commons-net-1.0.0-dev.jar=lib/commons-net-1.0.0-dev.jar
@@ -124,7 +125,8 @@ javac.classpath=\
     ${file.reference.voms-admin.jar}:\
     ${file.reference.wsdl4j-1.5.1.jar}:\
     ${file.reference.xercesImpl-2.6.2.jar}:\
-    ${file.reference.xml-apis-2.6.2.jar}
+    ${file.reference.xml-apis-2.6.2.jar}:\
+    ${file.reference.commons-io-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
