Dodata ExternalXML aplikacija

--- a/ExternalXML.properties
+++ b/ExternalXML.properties
@@ -13,7 +13,7 @@ CandidateCE = cluster1.csk.kg.ac.rs:8443/cream-pbs-aegis
 #CandidateCE = site-a.x.y:2119/jobmanager-pbs-seegrid
 
 # Application information
-ApplicationID = EXTERNAL
+ApplicationID = EXTERNALXML
 RequiredWallClockTime = 1000
 
 # DAT input file name (w/o ".dat" extension) 
@@ -21,14 +21,9 @@ RequiredWallClockTime = 1000
 
 # If running under WINE, path to WINE executable, otherwise leave empty
 PrefixToExecutable = 
-#PrefixToExecutable = /storage/exp_soft/wine/bin/wine
 
 # Identifikator optimizacije
 OptimizationUUID = aaaa-1111
-
-# Path/filename to Windows/Linux executable (see PrefixToExecutable)
-#ExecutableFileName = pakfpar
-#ExecutableFileName = pakp.exe
 
 UseSSL = off
 
