--- a/WorkerDispatcher.properties
+++ b/WorkerDispatcher.properties
@@ -58,14 +58,14 @@ AppsPropertiesFile = binder-plugin.properties
 #
 # After negotiating with binder some or all of these applications will be run on CE
 
-ApplicationList = TEST TEST-SEC EXTERNAL UPLOAD
+ApplicationList = TEST TEST-SEC EXTERNAL UPLOAD EXTERNALXML
 
 # List of handler classes associated with applications
 # Note: if custom implementation is used, specific libs (jar files) will probably
 # be needed.
 
 EXTERNAL_Class = visnja.WorkerExternal
-#EXTERNAL_Class = rs.ac.kg.pmf.R.WorkerR
+EXTERNALXML_Class = visnja.WorkerExternalXML
 UPLOAD_Class = rs.ac.kg.pmf.R.UploadWorker
 TEST_Class = yu.ac.bg.rcub.binder.test.TestWorkerHandler
 # external-example_Class = yu.ac.bg.rcub.binder.handler.worker.ExternalListener
