Dodata aplikacija koja koristi XML preko stdio

--- a/ExternalXML.properties
+++ b/ExternalXML.properties
@@ -13,7 +13,7 @@ CandidateCE = cluster1.csk.kg.ac.rs:8443/cream-pbs-aegis
 #CandidateCE = site-a.x.y:2119/jobmanager-pbs-seegrid
 
 # Application information
-ApplicationID = EXTERNALXML
+ApplicationID = EXTERNALXMLSTDIO
 RequiredWallClockTime = 1000
 
 # DAT input file name (w/o ".dat" extension) 
