--- a/WorkerDispatcher.properties
+++ b/WorkerDispatcher.properties
@@ -58,7 +58,7 @@ AppsPropertiesFile = binder-plugin.properties
 #
 # After negotiating with binder some or all of these applications will be run on CE
 
-ApplicationList = TEST TEST-SEC EXTERNAL UPLOAD EXTERNALXML
+ApplicationList = TEST TEST-SEC EXTERNAL UPLOAD EXTERNALXML EXTERNALXMLSTDIO
 
 # List of handler classes associated with applications
 # Note: if custom implementation is used, specific libs (jar files) will probably
@@ -66,6 +66,7 @@ ApplicationList = TEST TEST-SEC EXTERNAL UPLOAD EXTERNALXML
 
 EXTERNAL_Class = visnja.WorkerExternal
 EXTERNALXML_Class = visnja.WorkerExternalXML
+EXTERNALXMLSTDIO_Class = visnja.WorkerExternalXMLStdio
 UPLOAD_Class = rs.ac.kg.pmf.R.UploadWorker
 TEST_Class = yu.ac.bg.rcub.binder.test.TestWorkerHandler
 # external-example_Class = yu.ac.bg.rcub.binder.handler.worker.ExternalListener
