--- a/binder.properties
+++ b/binder.properties
@@ -94,7 +94,7 @@ Site-A_CE = cluster1.csk.kg.ac.rs:8443/cream-pbs-aegis
 # - If value is a space separated list of applications, only those applications
 #   will be allowed (note that an empty value ("") means no application will be allowed).
   
-Site-A_ApplicationList = TEST external-example EXTERNAL UPLOAD EXTERNALXML
+Site-A_ApplicationList = TEST external-example EXTERNAL UPLOAD EXTERNALXML EXTERNALXMLSTDIO
 
 # Default application list will be used if no application list is announced for CE. 
 DefaultApplicationList = ANY
